--- a/Interface_Practice/pytest.ini
+++ b/Interface_Practice/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -vs --alluredir ./tmp
+addopts = -vs  --alluredir ../tmp
 testpaths = ./testcase
 python_files = test_*.py
 python_classes = Test*
