--- a/NewScriptWrappingExercises/Data/logonDataTest.yaml
+++ b/NewScriptWrappingExercises/Data/logonDataTest.yaml
@@ -1,7 +1,8 @@
 -
-  title:
+  title: 测试参数化形式添加手机号01
+  level: 高
   data:
-    telphone:
+    telphone: ""
     passwd: "123456"
   result:
     code: 1002
