--- a/NewScriptWrappingExercises/Config/configtest222.ini
+++ b/NewScriptWrappingExercises/Config/configtest222.ini
@@ -1,7 +1,13 @@
-URL = "http://47.115.122.235:9003"
+[InterfaceData]
+url = "http://47.115.122.235:9003"
+
+[mysqlData]
 sqlhost = "192.168.241.47"
 sqlport = 3306
 sqluser = "pzservice"
 sqlpasswd = "pzservice"
 sqldatabase = "pzservice"
+
+[testsection]
+111 = 222
 
